--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ footer {
 
 .inputArea {
   background-color: #606060;
-  color: #fff;
+  color: rgb(255, 255, 255);
   border-radius: .5rem;
   padding: 1rem;
 }
